# labicfakenect

./: CMakeLists.txt  CMakeLists.txt~  README  README.md  fakenect.c  fakenect.sh.in  glviewregistered.c  record.c
